refactor: Migrate Internal DeviceAttributes class to kotlin (#524)